--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,8 +6,10 @@
     "@coreui/react": "^5.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/postcss": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -16,13 +18,16 @@
     "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-geocode": "^0.2.3",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "redux-thunk": "^3.1.0",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
